fixed image file type

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<div class="row">
 				<div class="card-group my-auto mx-auto" style="width:97.5%;">
 					<div class="card">
-						<img class="card-img-top" src="Images\VisualSort.png" alt="Card image cap">
+						<img class="card-img-top" src="Images\VisualSort.jpg" alt="Card image cap">
 						<div class="card-body text-left small">
 							<h4 class="card-title">Sorting Visualiser</h4>
 							<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
