--- a/VisualSort.html
+++ b/VisualSort.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
 <style>
-p {
-	font-size: calc(1.25vw + .5vmin);	
+.smallText {
+	font-size: calc(1.5px + 2vmin);
+}
+
+.midText {
+	font-size: calc(1.75px + 4vmin);
+}
+
+.vl {
+	border-left: 1px solid black;
+	height: calc(4px + 2vmin);		
 }
 <!-- Slider -->
 .slidecontainer {
@@ -13,7 +22,7 @@ p {
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 25px;
+  height: 2.5vh;
   border-radius: 5px;  
   background: #d3d3d3;
   outline: none;
@@ -33,16 +42,16 @@ p {
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 25px;
-  height: 25px;
+  width: 1.3vw;
+  height: 2.5vh;
   border-radius: 50%;  
   background: #4CAF50;
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
+  width: 1.3vw;
+  height: 2.5vh;
   border-radius: 50%;  
   background: #4CAF50;
   cursor: pointer;
@@ -54,16 +63,11 @@ canvas {
 }
 
 .dropdown-menu {
-	height: 250px;
+	height: 25vh;
 }
 
 .dropdown-item {
 	height: 20%;
-}
-
-.vl {
-	border-left: 1px solid black;
-	height: calc(2vw + .5vmin);		
 }
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
@@ -84,8 +88,8 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <title>Sorting Visualiser</Title>
 <body>
 <!-- Navigation bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<span class="navbar-brand mb-0 h1">Online Apps</span>
+<nav class="navbar navbar-expand-lg navbar-light bg-light smallText">
+	<span class="navbar-brand mb-0 h1" style="font-size: calc(1.5px + 2vmin);">Online Apps</span>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -99,40 +103,34 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 </nav>
 
 <!-- Body Container -->
-<div class="container-fluid px-lg-5">
+<div class="container-fluid">
 	<div class="row justify-content-center min-vh-100">
 		<div class="col p-3 mb-2 bg-light h1 text-dark border bg-light text-center">
-			Sorting Visualiser<div style="height: 1%;"></div><button class="btn btn-secondary btn-block p-0"><input type="range" min="5" max="49" value="30" class="slider" id="ArrayChange"></button><p class="float-left">number of values: <span id="value"></span></p>
-			<input type="range" min="10" max="1000" value="100" class="slider slider-colour" id="SpeedChange"><p class="float-left">Speed(ms): <span id="speed"></span></p>
+			<p class="midText">Sorting Visualiser</p><div style="height: 1%;"></div><input type="range" min="5" max="49" value="30" class="slider" id="ArrayChange"><p class="float-left"><p class="smallText">number of values: <span id="value"></span></p>
+			<input type="range" min="10" max="1000" value="100" class="slider" id="SpeedChange"><p class="float-left"><p class="smallText">Speed(ms): <span id="speed"></span></p>
 			<div style="height: 5%;"></div>
 			<div class="btn-group" role="group">
-				<button type="button" class="btn btn-secondary btn-lg border-right" id="RandomArray">Random Unsorted</button>
-				<button type="button" class="btn btn-secondary btn-lg border-left" id="Array">Unsorted Array</button>
+				<button type="button" class="btn btn-secondary btn-lg border-right" id="RandomArray"><p class="smallText mb-0">Random Unsorted</p></button>
+				<button type="button" class="btn btn-secondary btn-lg border-left" id="Array"><p class="smallText mb-0">Unsorted Array</p></button>
 			</div>
 			<div class="btn-group dropright" role="group">
-				<button id="btnGroupDrop" type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Choose Sorting Algorithm</button><div style="height: 1%;"></div>	 
+				<button id="btnGroupDrop" type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><p class="smallText mb-0">Choose Sorting Algorithm</p></button><div style="height: 1%;"></div>	 
 				<div class="dropdown-menu" aria-labelledby="btnGroupDrop">
-					<a class="dropdown-item" id="BubbleSort">Bubble Sort</a>
-					<a class="dropdown-item" id="SelectionSort">Selection Sort</a>
-					<a class="dropdown-item" id="InsertionSort">Insertion Sort</a>
-					<a class="dropdown-item" id="MergeSort">Merge Sort</a>
-					<a class="dropdown-item" id="QuickSort">Quick Sort</a>
+					<a class="dropdown-item smallText" id="BubbleSort">Bubble Sort</a>
+					<a class="dropdown-item smallText" id="SelectionSort">Selection Sort</a>
+					<a class="dropdown-item smallText" id="InsertionSort">Insertion Sort</a>
+					<a class="dropdown-item smallText" id="MergeSort">Merge Sort</a>
+					<a class="dropdown-item smallText" id="QuickSort">Quick Sort</a>
 				</div>
 			</div>
 			<canvas id="myCanvas" width="1000px" height="400px" style="border:1px solid black;">Your browser does not support the canvas element.</canvas>
-			<div class="row justify-content-center">
+			<div class="row justify-content-center smallText">
 				<p>Number of swaps: <span id="numOfSwaps"></span>&nbsp;</p><div class="vl"> </div><p>&nbsp;Number of compares: <span id="numOfComp"></span></p>
 			</div>
 		</div>
 	</div>
 </div>
-<footer class="footer py-2 border bg-light">
-	<div class="container text-center">
-		<p>Email: sebfuoco@gmail.com</p>
-	</div>
-</footer>
 <script>
-// variables
 // Array Slider
 var arrayRange = document.getElementById("ArrayChange");
 var output = document.getElementById("value");
