--- a/index.html
+++ b/index.html
@@ -2,26 +2,30 @@
 <html lang="en">
 <head>
 <style>
-p {
-	font-size: calc(1.5vw + 1vmin);
+.smallText {
+	font-size: calc(1.5px + 2vmin);
 }
 
 .midText {
-	font-size: calc(1.75vw + .5vmin);
-	font-weight: bold;
+	font-size: calc(1.75px + 4vmin);
 }
 
 .nav-link {
 	color: black;
 }
 
+.card-title {
+
+}
+
 .card-text {
 	opacity: 0.6;
 }
 .card-img-top {
+	object-fit: cover;  
     width: 100%;
     height: 50vh;
-    object-fit: cover;
+    overflow: hidden;
 }
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
@@ -43,8 +47,8 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <title>Home</Title>
 <body>
 <!-- Navigation bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<span class="navbar-brand mb-0 h1">Online Apps</span>
+<nav class="navbar navbar-expand-lg navbar-light border bg-light smallText">
+	<a class="navbar-brand mb-0 h1" style="font-size: calc(1.5px + 2vmin);">Online Apps</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -57,32 +61,30 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 	</div>
 </nav>
 <!-- Body Container -->
-<div class="container-fluid px-lg-5">
+<div class="container-fluid">
 	<div class="row justify-content-center min-vh-100">
-		<div class="col p-1 bg-light h1 text-dark border bg-light text-center">Projects<div style="height: 1%;"></div>
-			<div class="row">
+		<div class="col p-1 bg-light text-dark text-center midText">Projects<div style="height: 1%;"></div>
 				<div class="card-group my-auto mx-auto" style="width:97.5%;">
 					<div class="card">
 						<img class="card-img-top" src="Images\VisualSort.jpg" alt="Card image cap">
 						<div class="card-body text-left small">
-							<h4 class="card-title">Sorting Visualiser</h4>
-							<p class="card-text">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
+							<h4 class="card-title midText">Sorting Visualiser</h4>
+							<p class="card-text smallText">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
 							<a href="VisualSort.html" class="stretched-link"></a>
 						</div>
 					</div>
 					<div class="card">
 						<img class="card-img-top" src="Images\Dashboard.jpg" alt="Card image cap">
 						<div class="card-body text-left small">
-							<h4 class="card-title">Dashboard</h4>
-							<p class="card-text">This webpage consists of graphs and tables to show data.</p>
+							<h4 class="card-title midText">Dashboard</h4>
+							<p class="card-text smallText">This webpage consists of graphs and tables to show data.</p>
 							<a href="Dashboard/index.html" class="stretched-link"></a>
 						</div>
 					</div>
 				</div>
-			</div>
 			<hr>
-			<h2>Who Am I?</h2>
-			<p>My name is Sebastiano Fuoco and I am currently studying BSc Computing at University Centre Farnborough
+			<p class="midText">Who Am I?</p>
+			<p class="smallText">My name is Sebastiano Fuoco and I am currently studying BSc Computing at University Centre Farnborough
 			currently on track for a "". My ambitions involve working with computers, where in my spare time i enjoy 
 			maintaining my computers and programming. My course is primarily centered around application development and networking. 
 			I have experience within the IT sector as well as knowing some programming languages. My goal is to be within the IT sector helping identify problems for programs and coming up with solutions to fix them,
@@ -99,27 +101,27 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 			<div class="tab-content small" id="nav-tabContent">
 				<div class="tab-pane fade show active" id="nav-education" role="tabpanel" aria-labelledby="nav-education-tab">
 					<div class="midText">2018-2021 University Centre Farnborough</div>
-					<p>BSc Computing: N/A<br>
+					<p class="smallText">BSc Computing: N/A<br>
 					HND Computing: N/A<br>
 					HNC Computing: D
 					</p>
 					<div class="midText">2016-2018	Woking College</div>
-					<p>IT BTEC Diploma: D*D*<br>
+					<p class="smallText">IT BTEC Diploma: D*D*<br>
 					A-Level Electronics: A</p>
 					<div class="midText">2012-2016	Tomlinscote School</div>
-					<p> 6 GCSES: (B in Maths & C in English Language)</p>
+					<p class="smallText"> 6 GCSES: (B in Maths & C in English Language)</p>
 				</div>
 				<div class="tab-pane fade" id="nav-work" role="tabpanel" aria-labelledby="nav-work-tab"><p>
 					<div class="midText">2019+ Woking Lawn & Croquet Club</div>
-					<p>Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
+					<p class="smallText">Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
 					<div class="midText">2017 Woking College</div>
-					<p>IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
+					<p class="smallText">IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
 					<div class="midText">2015 Tomlinscote School</div>
-					<p>IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus.</p>
+					<p class="smallText">IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus.</p>
 				</div>
 				<div class="tab-pane fade" id="nav-skills" role="tabpanel" aria-labelledby="nav-skills-tab">
 					<div class="container">
-						<div class="row">
+						<div class="row pb-2">
 							<div class="col">
 								<p>Microsoft Office 365</p>
 							</div>
@@ -129,8 +131,8 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
+						<div class="row pb-2">
+							<div class="col">
 								<p>Adobe Illustrator</p>
 							</div>
 							<div class="col-md-10 align-self-center">
@@ -139,8 +141,8 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
+						<div class="row pb-2">
+							<div class="col">
 								<p>Adobe Photoshop</p>
 							</div>
 							<div class="col-md-10 align-self-center">
@@ -149,89 +151,69 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
+						<div class="row pb-2">
+							<div class="col">
 								<p>Packet Tracer</p>
 							</div>
-							<div class="col-md-10">
+							<div class="col-md-10 align-self-center">
 								<div class="progress" style="height:2.25vw;">
 									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
+						<div class="row pb-2">
+							<div class="col">
 								<p>Python</p>
 							</div>
-							<div class="col-md-10 ">
+							<div class="col-md-10 align-self-center">
 								<div class="progress" style="height:2.25vw;">
 									<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
+						<div class="row pb-2">
+							<div class="col">
 								<p>C++/C#</p>
 							</div>
-							<div class="col-md-10">
+							<div class="col-md-10 align-self-center">
 								<div class="progress" style="height:2.25vw;">
 									<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
-								<p>Visual Basic</p>
-							</div>
-							<div class="col-md-10">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-2">
+						<div class="row pb-2">
+							<div class="col">
 								<p>HTML</p>
 							</div>
-							<div class="col-md-10">
+							<div class="col-md-10 align-self-center">
 								<div class="progress" style="height:2.25vw;">
 									<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
+						<div class="row pb-2">
+							<div class="col">
 								<p>CSS</p>
 							</div>
-							<div class="col-md-10">
+							<div class="col-md-10 align-self-center">
 								<div class="progress" style="height:2.25vw;">
 									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-md-2">
+							<div class="col">
 								<p>JavaScript</p>
 							</div>
-							<div class="col-md-10">
+							<div class="col-md-10 align-self-center">
 								<div class="progress" style="height:2.25vw;">
 									<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-md-2">
-								<p>BootStrap</p>
-							</div>
-							<div class="col-md-10">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-								</div>
-							</div>
-							&nbsp;
-						</div>
 					</div>
 				</div>
+				&nbsp;
 			</div>
 		</div>
 	</div>
