--- a/VisualSort.html
+++ b/VisualSort.html
@@ -62,13 +62,7 @@ canvas {
   width: 90vw; 
 }
 
-.dropdown-menu {
-	height: 25vh;
-}
 
-.dropdown-item {
-	height: 20%;
-}
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
 <meta charset="utf-8">
@@ -88,7 +82,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 <title>Sorting Visualiser</Title>
 <body>
 <!-- Navigation bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light smallText">
+<nav class="navbar navbar-expand-lg navbar-light border bg-light smallText">
 	<span class="navbar-brand mb-0 h1" style="font-size: calc(1.5px + 2vmin);">Online Apps</span>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -101,11 +95,10 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 		</div>
 	</div>
 </nav>
-
 <!-- Body Container -->
 <div class="container-fluid">
 	<div class="row justify-content-center min-vh-100">
-		<div class="col p-3 mb-2 bg-light h1 text-dark border bg-light text-center">
+		<div class="col p-3 mb-2 bg-light h1 text-dark text-center">
 			<p class="midText">Sorting Visualiser</p><div style="height: 1%;"></div><input type="range" min="5" max="49" value="30" class="slider" id="ArrayChange"><p class="float-left"><p class="smallText">number of values: <span id="value"></span></p>
 			<input type="range" min="10" max="1000" value="100" class="slider" id="SpeedChange"><p class="float-left"><p class="smallText">Speed(ms): <span id="speed"></span></p>
 			<div style="height: 5%;"></div>
@@ -114,7 +107,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 				<button type="button" class="btn btn-secondary btn-lg border-left" id="Array"><p class="smallText mb-0">Unsorted Array</p></button>
 			</div>
 			<div class="btn-group dropright" role="group">
-				<button id="btnGroupDrop" type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><p class="smallText mb-0">Choose Sorting Algorithm</p></button><div style="height: 1%;"></div>	 
+				<button id="btnGroupDrop" type="button" class="btn btn-primary btn-lg" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><p class="smallText mb-0">Choose Sorting Algorithm</p></button><div style="height: 1%;"></div>	 
 				<div class="dropdown-menu" aria-labelledby="btnGroupDrop">
 					<a class="dropdown-item smallText" id="BubbleSort">Bubble Sort</a>
 					<a class="dropdown-item smallText" id="SelectionSort">Selection Sort</a>
