--- a/VisualSort.html
+++ b/VisualSort.html
@@ -42,16 +42,16 @@
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 1.3vw;
-  height: 2.5vh;
+  width: 25px;
+  height: 3vh;
   border-radius: 50%;  
   background: #4CAF50;
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
-  width: 1.3vw;
-  height: 2.5vh;
+  width: 25px;
+  height: 3vh;
   border-radius: 50%;  
   background: #4CAF50;
   cursor: pointer;
@@ -61,8 +61,6 @@ canvas {
   height: 50vh; 
   width: 90vw; 
 }
-
-
 </style>
 <!-- BootStrap code from copied/modified from BootStrap documentation -->
 <meta charset="utf-8">
