--- a/index.html
+++ b/index.html
@@ -2,20 +2,8 @@
 <html lang="en">
 <head>
 <style>
-.smallText {
-	font-size: calc(1.5px + 2vmin);
-}
-
-.midText {
-	font-size: calc(1.75px + 4vmin);
-}
-
 .nav-link {
 	color: black;
-}
-
-.card-title {
-
 }
 
 .card-text {
@@ -46,9 +34,8 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 </head>
 <title>Home</Title>
 <body>
-<!-- Navigation bar -->
-<nav class="navbar navbar-expand-lg navbar-light border bg-light smallText">
-	<a class="navbar-brand mb-0 h1" style="font-size: calc(1.5px + 2vmin);">Online Apps</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<div class="navbar-brand">Online Apps</div>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -56,165 +43,164 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 		<div class="navbar-nav mr-auto">
 			<a class="nav-item active nav-link" href="index.html">Home</a>
 			<a class="nav-item nav-link" href="VisualSort.html">Sorting Visualiser</a>
-			<a class="nav item nav-link" href="Dashboard/index.html">Dashboard</a>
+			<a class="nav item nav-link" href="dashboard.html">Dashboard</a>
 		</div>
 	</div>
 </nav>
 <!-- Body Container -->
 <div class="container-fluid">
-	<div class="row justify-content-center min-vh-100">
-		<div class="col p-1 bg-light text-dark text-center midText">Projects<div style="height: 1%;"></div>
-				<div class="card-group my-auto mx-auto" style="width:97.5%;">
-					<div class="card">
-						<img class="card-img-top" src="Images\VisualSort.jpg" alt="Card image cap">
-						<div class="card-body text-left small">
-							<h4 class="card-title midText">Sorting Visualiser</h4>
-							<p class="card-text smallText">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
-							<a href="VisualSort.html" class="stretched-link"></a>
-						</div>
-					</div>
-					<div class="card">
-						<img class="card-img-top" src="Images\Dashboard.jpg" alt="Card image cap">
-						<div class="card-body text-left small">
-							<h4 class="card-title midText">Dashboard</h4>
-							<p class="card-text smallText">This webpage consists of graphs and tables to show data.</p>
-							<a href="Dashboard/index.html" class="stretched-link"></a>
-						</div>
-					</div>
+	<div class="row justify-content-center">
+		<div class="col p-2 bg-light text-dark text-center"><h1 class="display-4">Projects</h1>
+		<div class="card-group my-auto mx-auto" style="width:97.5%;">
+			<div class="card">
+				<img class="card-img-top" src="Images\VisualSort.jpg" alt="Card image cap">
+				<div class="card-body text-left small">
+					<h4 class="card-title midText">Sorting Visualiser</h4>
+					<p class="card-text smallText">This webpage visualises different sorting algorithms and makes it easy to understand the efficiencies of them in different environments.</p>
+					<a href="VisualSort.html" class="stretched-link"></a>
 				</div>
-			<hr>
-			<p class="midText">Who Am I?</p>
-			<p class="smallText">My name is Sebastiano Fuoco and I am currently studying BSc Computing at University Centre Farnborough
-			currently on track for a "". My ambitions involve working with computers, where in my spare time i enjoy 
-			maintaining my computers and programming. My course is primarily centered around application development and networking. 
-			I have experience within the IT sector as well as knowing some programming languages. My goal is to be within the IT sector helping identify problems for programs and coming up with solutions to fix them,
-			as well as planning out designs and implementing the solutions into the programs. I am currently looking to apply for graduate schemes within
-			the IT sector that will further improve my knowledge and experience, as well as having the ability to progress my career.
-			</p><hr>
-			<nav>
-				<div class="nav nav-tabs  justify-content-center" id="nav-tab" role="tablist">
-					<a class="nav-item nav-link active" id="nav-education-tab" data-toggle="tab" href="#nav-education" role="tab" aria-controls="nav-education" aria-selected="true">My Education</a>
-					<a class="nav-item nav-link " id="nav-work-tab" data-toggle="tab" href="#nav-work" role="tab" aria-controls="nav-work" aria-selected="false">Work Experience</a>
-					<a class="nav-item nav-link" id="nav-skills-tab" data-toggle="tab" href="#nav-skills" role="tab" aria-controls="nav-skills" aria-selected="false">Skills</a>
-				</div>
-			</nav>
-			<div class="tab-content small" id="nav-tabContent">
-				<div class="tab-pane fade show active" id="nav-education" role="tabpanel" aria-labelledby="nav-education-tab">
-					<div class="midText">2018-2021 University Centre Farnborough</div>
-					<p class="smallText">BSc Computing: N/A<br>
-					HND Computing: N/A<br>
-					HNC Computing: D
-					</p>
-					<div class="midText">2016-2018	Woking College</div>
-					<p class="smallText">IT BTEC Diploma: D*D*<br>
-					A-Level Electronics: A</p>
-					<div class="midText">2012-2016	Tomlinscote School</div>
-					<p class="smallText"> 6 GCSES: (B in Maths & C in English Language)</p>
-				</div>
-				<div class="tab-pane fade" id="nav-work" role="tabpanel" aria-labelledby="nav-work-tab"><p>
-					<div class="midText">2019+ Woking Lawn & Croquet Club</div>
-					<p class="smallText">Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
-					<div class="midText">2017 Woking College</div>
-					<p class="smallText">IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
-					<div class="midText">2015 Tomlinscote School</div>
-					<p class="smallText">IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus.</p>
-				</div>
-				<div class="tab-pane fade" id="nav-skills" role="tabpanel" aria-labelledby="nav-skills-tab">
-					<div class="container">
-						<div class="row pb-2">
-							<div class="col">
-								<p>Microsoft Office 365</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
-								</div>
-							</div>
-						</div>
-						<div class="row pb-2">
-							<div class="col">
-								<p>Adobe Illustrator</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-								</div>
-							</div>
-						</div>
-						<div class="row pb-2">
-							<div class="col">
-								<p>Adobe Photoshop</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-								</div>
-							</div>
-						</div>
-						<div class="row pb-2">
-							<div class="col">
-								<p>Packet Tracer</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-								</div>
-							</div>
-						</div>
-						<div class="row pb-2">
-							<div class="col">
-								<p>Python</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-								</div>
-							</div>
-						</div>
-						<div class="row pb-2">
-							<div class="col">
-								<p>C++/C#</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-								</div>
-							</div>
-						</div>
-						<div class="row pb-2">
-							<div class="col">
-								<p>HTML</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
-								</div>
-							</div>
-						</div>
-						<div class="row pb-2">
-							<div class="col">
-								<p>CSS</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col">
-								<p>JavaScript</p>
-							</div>
-							<div class="col-md-10 align-self-center">
-								<div class="progress" style="height:2.25vw;">
-									<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				&nbsp;
 			</div>
+			<div class="card">
+				<img class="card-img-top" src="Images\Dashboard.jpg" alt="Card image cap">
+				<div class="card-body text-left small">
+					<h4 class="card-title midText">Dashboard</h4>
+					<p class="card-text smallText">This webpage consists of graphs and tables to show data, which can be edited and is saved locally on your device.</p>
+					<a href="Dashboard/index.html" class="stretched-link"></a>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<h1 class="display-4">Who Am I?</h1>
+		<p>My name is Sebastiano Fuoco and I am currently studying BSc Computing at University Centre Farnborough
+		currently on track for a "". My ambitions involve working with computers, where in my spare time i enjoy 
+		maintaining my computers and programming. My course is primarily centered around application development and networking. 
+		I have experience within the IT sector as well as knowing some programming languages. My goal is to be within the IT sector helping identify problems for programs and coming up with solutions to fix them,
+		as well as planning out designs and implementing the solutions into the programs. I am currently looking to apply for graduate schemes within
+		the IT sector that will further improve my knowledge and experience, as well as having the ability to progress my career.
+		</p><hr>
+		<nav>
+			<div class="nav nav-tabs  justify-content-center" id="nav-tab" role="tablist">
+				<a class="nav-item nav-link active" id="nav-education-tab" data-toggle="tab" href="#nav-education" role="tab" aria-controls="nav-education" aria-selected="true">My Education</a>
+				<a class="nav-item nav-link " id="nav-work-tab" data-toggle="tab" href="#nav-work" role="tab" aria-controls="nav-work" aria-selected="false">Work Experience</a>
+				<a class="nav-item nav-link" id="nav-skills-tab" data-toggle="tab" href="#nav-skills" role="tab" aria-controls="nav-skills" aria-selected="false">Skills</a>
+			</div>
+		</nav>
+		<div class="tab-content small" id="nav-tabContent">
+			<div class="tab-pane fade show active" id="nav-education" role="tabpanel" aria-labelledby="nav-education-tab">
+				<div class="lead">2018-2021 University Centre Farnborough</div>
+				<p>BSc Computing: N/A<br>
+				HND Computing: N/A<br>
+				HNC Computing: D
+				</p>
+				<div class="lead">2016-2018	Woking College</div>
+				<p>IT BTEC Diploma: D*D*<br>
+				A-Level Electronics: A</p>
+				<div class="lead">2012-2016	Tomlinscote School</div>
+				<p> 6 GCSES: (B in Maths & C in English Language)</p>
+			</div>
+			<div class="tab-pane fade" id="nav-work" role="tabpanel" aria-labelledby="nav-work-tab">
+				<div class="lead">2019+ Woking Lawn & Croquet Club</div>
+				<p>Kitchen Staff: Duties include opening up bar, closing bar, cooking, bartending, stocking, and cleaning.</p>
+				<div class="lead">2017 Woking College</div>
+				<p>IT Support Assistant: Duties include replacing printer toners and troubleshooting computers.</p>
+				<div class="lead">2015 Tomlinscote School</div>
+				<p>IT Support Assistant: Duties include setting up computers, installing software on computers, and installing devices on the campus.</p>
+			</div>
+			<div class="tab-pane fade" id="nav-skills" role="tabpanel" aria-labelledby="nav-skills-tab">
+				<div class="container">
+					<div class="row pb-2 ">
+						<div class="col">
+							<p class="lead">Office 365</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
+							</div>
+						</div>
+					</div>
+					<div class="row pb-2">
+						<div class="col">
+							<p class="lead">Adobe Illustrator</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
+							</div>
+						</div>
+					</div>
+					<div class="row pb-2">
+						<div class="col">
+							<p class="lead">Adobe Photoshop</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
+							</div>
+						</div>
+					</div>
+					<div class="row pb-2">
+						<div class="col">
+							<p class="lead">Packet Tracer</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
+							</div>
+						</div>
+					</div>
+					<div class="row pb-2">
+						<div class="col">
+							<p class="lead">Python</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
+							</div>
+						</div>
+					</div>
+					<div class="row pb-2">
+						<div class="col">
+							<p class="lead">C++/C#</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
+							</div>
+						</div>
+					</div>
+					<div class="row pb-2">
+						<div class="col">
+							<p class="lead">HTML</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">advanced</div>
+							</div>
+						</div>
+					</div>
+					<div class="row pb-2">
+						<div class="col">
+							<p class="lead">CSS</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">intermediate</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col">
+							<p class="lead">JavaScript</p>
+						</div>
+						<div class="col-md-10 align-self-center">
+							<div class="progress" style="height:2.25vw;">
+								<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">beginner</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			&nbsp;
 		</div>
 	</div>
 </div>
