--- a/VisualSort.html
+++ b/VisualSort.html
@@ -34,7 +34,7 @@
   -webkit-appearance: none;
   appearance: none;
   width: 25px;
-  height: 3vh;
+  height: 25px;
   border-radius: 50%;  
   background: #4CAF50;
   cursor: pointer;
@@ -42,7 +42,7 @@
 
 .slider::-moz-range-thumb {
   width: 25px;
-  height: 3vh;
+  height: 25px;
   border-radius: 50%;  
   background: #4CAF50;
   cursor: pointer;
